[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameRoom/GameSet.gd" type="Script" id=1]

[node name="GameSet" type="Button"]
margin_right = 661.0
margin_bottom = 77.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameSet" type="Label" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 77.0
size_flags_vertical = 1
text = "Game_name"
valign = 1

[node name="NumberOfQuestions" type="Label" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 661.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2/2"
align = 2
valign = 1

[connection signal="pressed" from="." to="." method="_on_GameSet_pressed"]
